--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,16 @@
 
 <body>
 	<p>Node App Works!</p>
+	<script src="/socket.io/socket.io.js"></script>
+	<script>
+		var socket = io();
+		socket.on('connect', () => {
+			console.log('Connected To Server!');
+		});
+		socket.on('disconnect', () => {
+			console.log('Disconnected From Server!');
+		});
+	</script>
 </body>
 
 </html>
