--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,35 @@
 <head>
 	<meta charset="utf-8">
 	<title>Node Socket Chat</title>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+	<link rel="stylesheet" href="./stylesheets/style.css">
 </head>
 
 <body>
-	<p>Node App Works!</p>
+	<header class="mdl-layout__header">
+		<div class="mdl-layout__header-row">
+			<!-- Title -->
+			<span class="mdl-layout-title">Socket Chat</span>
+		</div>
+	</header>
+	<form action="#" id="message-form">
+		<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+			<input class="mdl-textfield__input" type="text" id="message-input">
+			<label class="mdl-textfield__label" for="message-input">Message...</label>
+		</div>
+		<button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored" type="submit">
+			<i class="material-icons">send</i>
+		</button>
+	</form>
+	<div>
+		<ul class="demo-list-icon mdl-list" id="message-list">
+		</ul>	
+	</div>
+	
 	<script src="/socket.io/socket.io.js"></script>
+	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+	<script src="./scripts/libs/jquery.js"></script>
 	<script src="./scripts/index.js"></script>
 </body>
 
