Add geolocation support with geolocation api

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 	<link rel="stylesheet" href="./stylesheets/style.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -15,6 +14,11 @@
 		<div class="mdl-layout__header-row">
 			<!-- Title -->
 			<span class="mdl-layout-title">Socket Chat</span>
+			<div class="mdl-layout-spacer"></div>
+      <!-- Navigation -->
+      <nav class="mdl-navigation">
+        <a class="mdl-navigation__link" href="" id="send-location-btn">Send Location</a>
+      </nav>
 		</div>
 	</header>
 	<form action="#" id="message-form">
