--- a/public/index.html
+++ b/public/index.html
@@ -10,31 +10,46 @@
 </head>
 
 <body>
-	<header class="mdl-layout__header">
-		<div class="mdl-layout__header-row">
-			<!-- Title -->
-			<span class="mdl-layout-title">Socket Chat</span>
-			<div class="mdl-layout-spacer"></div>
-      <!-- Navigation -->
-      <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" href="" id="send-location-btn">Send Location</a>
-      </nav>
+	<div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer
+		mdl-layout--fixed-header">
+		<header class="mdl-layout__header">
+			<div class="mdl-layout__header-row">
+				<!-- Title -->
+				<span class="mdl-layout-title">Socket Chat</span>
+				<div class="mdl-layout-spacer"></div>
+				<!-- Navigation -->
+				<nav class="mdl-navigation">
+					<a class="mdl-navigation__link" href="" id="send-location-btn">Send Location</a>
+				</nav>
+			</div>
+		</header>
+		<div class="mdl-layout__drawer">
+			<span class="mdl-layout-title">Online Users</span>
+			<nav class="mdl-navigation">
+				<a class="mdl-navigation__link" href="">User</a>
+				<a class="mdl-navigation__link" href="">User</a>
+				<a class="mdl-navigation__link" href="">User</a>
+				<a class="mdl-navigation__link" href="">User</a>
+			</nav>
 		</div>
-	</header>
-	<form action="#" id="message-form">
-		<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-			<input class="mdl-textfield__input" type="text" id="message-input">
-			<label class="mdl-textfield__label" for="message-input">Message...</label>
-		</div>
-		<button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored" type="submit">
-			<i class="material-icons">send</i>
-		</button>
-	</form>
-	<div>
-		<ul class="demo-list-icon mdl-list" id="message-list">
-		</ul>	
+		<main class="mdl-layout__content">
+			<div class="page-content">
+				<div>
+					<ul class="demo-list-icon mdl-list" id="message-list">
+					</ul>
+				</div>
+				<form action="#" id="message-form">
+					<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+						<input class="mdl-textfield__input" type="text" id="message-input" autofocus autocomplete="off">
+						<label class="mdl-textfield__label" for="message-input">Message...</label>
+					</div>
+					<button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored" type="submit">
+						<i class="material-icons">send</i>
+					</button>
+				</form>
+			</div>
+		</main>
 	</div>
-	
 	<script src="/socket.io/socket.io.js"></script>
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 	<script src="./scripts/libs/jquery.js"></script>
