--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Node Socket Chat</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
@@ -53,6 +54,7 @@
 	<script src="/socket.io/socket.io.js"></script>
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 	<script src="./scripts/libs/jquery.js"></script>
+	<script src="./scripts/libs/moment.js"></script>
 	<script src="./scripts/index.js"></script>
 </body>
 
