Implement login form functionality

--- a/public/index.html
+++ b/public/index.html
@@ -19,19 +19,19 @@
 						<h2 class="mdl-card__title-text">Socket Chat</h2>
 					</div>
 					<div class="mdl-card__supporting-text">
-						<form action="#">
+						<form action="./chat.html" id="login-form">
 							<div class="mdl-textfield mdl-js-textfield">
-								<input class="mdl-textfield__input" type="text" id="username" autocomplete="off">
+								<input class="mdl-textfield__input" type="text" id="username" name="username" autocomplete="off">
 								<label class="mdl-textfield__label" for="username">Username</label>
 							</div>
 							<div class="mdl-textfield mdl-js-textfield">
-								<input class="mdl-textfield__input" type="password" id="userroom">
+								<input class="mdl-textfield__input" type="text" id="userroom" name="userroom">
 								<label class="mdl-textfield__label" for="userroom">Room</label>
 							</div>
 						</form>
 					</div>
 					<div class="mdl-card__actions mdl-card--border">
-						<button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Log in</button>
+						<button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" type="submit" id="login-btn">Log in</button>
 					</div>
 				</div>
 			</main>
