--- a/public/chat.html
+++ b/public/chat.html
@@ -75,7 +75,8 @@
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 	<script src="./scripts/libs/jquery.js"></script>
 	<script src="./scripts/libs/moment.js"></script>
-	<script src="./scripts//libs/mustache.js"></script>
+  <script src="./scripts//libs/mustache.js"></script>
+  <script src="./scripts/libs/deparam.js"></script>
 	<script src="./scripts/chat.js"></script>
 </body>
 
