--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,8 @@
 								<label class="mdl-textfield__label" for="username">Username</label>
 							</div>
 							<div class="mdl-textfield mdl-js-textfield">
-								<input class="mdl-textfield__input" type="text" id="userroom" name="userroom">
-								<label class="mdl-textfield__label" for="userroom">Room</label>
+								<input class="mdl-textfield__input" type="text" id="room" name="room">
+								<label class="mdl-textfield__label" for="room">Room</label>
 							</div>
 						</form>
 					</div>
@@ -42,7 +42,8 @@
 	<script src="./scripts/libs/jquery.js"></script>
 	<script src="./scripts/libs/moment.js"></script>
 	<script src="./scripts//libs/mustache.js"></script>
-	<script src="./scripts/chat.js"></script>
+	<script src="./scripts/libs/deparam.js"></script>
+	<script src="./scripts/index.js"></script>
 </body>
 
 </html>
