Add users with ES6 classes

--- a/public/chat.html
+++ b/public/chat.html
@@ -25,7 +25,7 @@
 			</div>
 		</header>
 		<div class="mdl-layout__drawer">
-			<span class="mdl-layout-title">Online Users</span>
+			<span class="mdl-layout-title" id="online-title">Online Users</span>
 			<nav class="mdl-navigation">
 				<a class="mdl-navigation__link" href="">User</a>
 				<a class="mdl-navigation__link" href="">User</a>
