--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
 					<div class="mdl-card__supporting-text">
 						<form action="./chat.html" id="login-form">
 							<div class="mdl-textfield mdl-js-textfield">
-								<input class="mdl-textfield__input" type="text" id="username" name="username" autocomplete="off">
-								<label class="mdl-textfield__label" for="username">Username</label>
+								<input class="mdl-textfield__input" type="text" id="name" name="name" autocomplete="off">
+								<label class="mdl-textfield__label" for="name">Username</label>
 							</div>
 							<div class="mdl-textfield mdl-js-textfield">
 								<input class="mdl-textfield__input" type="text" id="room" name="room">
