Render users to view

--- a/public/chat.html
+++ b/public/chat.html
@@ -26,11 +26,7 @@
 		</header>
 		<div class="mdl-layout__drawer">
 			<span class="mdl-layout-title" id="online-title">Online Users</span>
-			<nav class="mdl-navigation">
-				<a class="mdl-navigation__link" href="">User</a>
-				<a class="mdl-navigation__link" href="">User</a>
-				<a class="mdl-navigation__link" href="">User</a>
-				<a class="mdl-navigation__link" href="">User</a>
+			<nav class="mdl-navigation" id="users-list">
 			</nav>
 		</div>
 		<main class="mdl-layout__content">
