--- a/public/chat.html
+++ b/public/chat.html
@@ -40,6 +40,9 @@
 		</div>
 		<main class="mdl-layout__content">
 			<div class="page-content">
+					<iframe src="https://siddube-tic-tac-toe.herokuapp.com/">
+						<p>Your browser does not support iframes.</p>
+					</iframe>
 				<div>
 					<ul class="demo-list-icon mdl-list" id="message-list">
 					</ul>
